# RMA_projeto

./: CMakeLists.txt  README.md  output_file  test_reader.cpp
clouds/teste/: teste_1.pcd  teste_11.pcd  teste_12.pcd  teste_13.pcd  teste_14.pcd  teste_2.pcd  teste_4.pcd  teste_8.pcd  teste_9.pcd
clouds/treino/: objecto_caixa_branca.pcd  objecto_furador.pcd
rma_project/: CMakeLists.txt  Controller.cpp  Game.cpp  Object.cpp  ObjectAnalyzer.cpp  ObjectDetails.cpp  Question.cpp  TestDetails.cpp  main.cpp  main.cpp.autosave  objectanalyzer.h  output_file
rma_project/Data/: cessna.osgt
rma_project/Data/Clouds/Dataset3/: cloud_1.pcd  cloud_10.pcd  cloud_11.pcd  cloud_12.pcd  cloud_2.pcd  cloud_3.pcd  cloud_4.pcd  cloud_5.pcd  cloud_6.pcd  cloud_7.pcd  cloud_8.pcd  cloud_9.pcd
rma_project/clouds/teste/: teste_10.pcd  teste_15.pcd  teste_3.pcd  teste_5.pcd  teste_6.pcd  teste_7.pcd
rma_project/clouds/treino/: cloud_1.pcd  objecto_caixa_azul.pcd  objecto_caixa_vermelha.pcd  objecto_cassete_preta.pcd  objecto_livro_azul.pcd  objecto_livro_cinzento.pcd  objecto_xicara_branca.pcd
