cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(MY_GRAND_PROJECT)

find_package(PCL 1.3 REQUIRED COMPONENTS)
find_package( OpenThreads )
find_package( osg )
find_package( osgDB )
find_package( osgUtil )
find_package( osgViewer )
find_package( osgShadow )
find_package( osgParticle )
find_package( osgText )
find_package( osgGA )
find_package( GLUT )
find_package( OpenGL )

include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(test_reader test_reader.cpp)

target_link_libraries(test_reader ${PCL_LIBRARIES})
