project(rma_project)
cmake_minimum_required(VERSION 2.6 FATAL_ERROR)

find_package(PCL 1.3 REQUIRED COMPONENTS)
find_package( OpenThreads )
find_package( osg )
find_package( osgDB )
find_package( osgUtil )
find_package( osgViewer )
find_package( osgShadow )
find_package( osgParticle )
find_package( osgText )
find_package( osgGA )
find_package( GLUT )
find_package( OpenGL )

include_directories(${PCL_INCLUDE_DIRS})
macro( config_project PROJNAME LIBNAME )
	include_directories( ${${LIBNAME}_INCLUDE_DIR} )
	target_link_libraries( ${PROJNAME} ${${LIBNAME}_LIBRARY} )
endmacro()

add_executable(main main.cpp)
add_executable(ObjectDetails ObjectDetails.cpp)

target_link_libraries( main ${PCL_LIBRARIES} )
target_link_libraries( ObjectDetails ${PCL_LIBRARIES} )

config_project(main PCL)
config_project(main OPENTHREADS )
config_project(main OSG )
config_project(main OSGDB )
config_project(main OSGSHADOW )
config_project(main OSGUTIL )
config_project(main OSGVIEWER )
config_project(main OSGPARTICLE )
config_project(main OSGTEXT )
config_project(main OSGGA )
config_project(main GLUT )
config_project(main OPENGL )

config_project(ObjectDetails PCL)